--- a/views/Layouts/main.hbs
+++ b/views/Layouts/main.hbs
@@ -1,4 +1,4 @@
 
     
     {{{body}}}
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
