--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ABOUT</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/book.css">
 </head>
 <body>
-    About
-</body>
+    <section>
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="rooms">Rooms</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact">Contact</a>
+                  </li>
+                </ul>
+                 {{#if removedUser}}
+                    <ul class="navbar-nav ms-auto">
+                          <button class="btn btn-primary" type="button">
+                            <img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+                            <a href="/logout" style="width:auto; text-decoration: none; color:white;" aria-current="page"> Logout</a></button>
+                    </ul>
+                {{else}}
+                    <ul class="navbar-nav ms-auto">
+                        <button class="btn btn-primary" type="button">
+                          <img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+                          <a href="user" style="text-decoration: none; color:white ;">Login</a></button>
+                    </ul>
+                {{/if}}
+              </div>
+            </div>
+          </nav>
+    </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    </section>
+    <section>
+        <div class="row row-cols-1 row-cols-lg-2">
+        <div class="cols">
+            <img src="images/image.jpg" alt="clg" style="height:90%; width:100%" >
+        </div>
+        <div class="cols">
+            <h4 style="text-align: left; padding-left:2px; padding-right:2px">Set in a picturesque landscape at the foothills of the Western Ghats, National Institute of Technology Calicut (NITC) is located about 22 kilometers north-east of Calicut City. National Institute of Technology Calicut is a Technical Institution of national importance set up by an Act of parliament(Act 29 of 2007) namely, the National Institute of technology Act 2007, which received the assent of the President of India on 5th June,2007. The provision of the Act have come into force with effect from 15th August,2007 as per Notification S.O.1384(E) dated 9th August, 2007 of the Ministry of Education(Shiksha Mantralaya),New Delhi. As per the provision of the said Act, this Institution runs on non profitable basis.</h4>
+            </div>
+            </div>
+    </section>
+    <section id="footer">
+        <div class="bg-dark text-light">
+            <div class="row row-cols-2 row-cols-lg-2">
+                <div class="col text-center py-5"><h2>National Institute of Technology Calicut</h2></div>
+            <div class="col">
+                <br>
+                <p>Chief Warden: 0495-2285454</p>
+                <p>Hostel Office: 0495-2285208</p>
+                <p>Manager: 0495-2287238</p>
+            <p>Website:<a href="www.nitc.ac.in"> www.nitc.ac.in</a></p>
+             </div>
+        </div>
+   </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    </body>
 </html>
