--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/book.css">
     <script src="script.js"></script>
@@ -19,7 +18,6 @@
 </script>
 </head>
 <body style="font-family: 'Roboto Slab', serif;">
-  <section>
   <header class="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
@@ -31,16 +29,16 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index">Home</a>
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">About</a>
+                    <a class="nav-link" aria-current="page" href="about">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="rooms">Rooms</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact">Contact</a>
                   </li>
                 </ul>
                  {{#if removedUser}}
@@ -60,7 +58,6 @@
             </div>
           </nav>
     </header>
-    </section>
     <br>
     <br>
     <section>
@@ -146,7 +143,7 @@
 							<table class="table">
 								
 								{{#if avail}}
-                <h5>with checkIn {{det.cin}} & checkout {{det.cout}} for {{det.rooms}} rooms below:</h5>
+                <h5 style="color:white">with checkIn {{det.cin}} & checkout {{det.cout}} for {{det.rooms}} rooms below:</h5>
                 {{!-- //apni table --}}
                 <thead>
 									<th>Hostel</th>
@@ -161,7 +158,7 @@
 									<td><strong>{{this.Price}}/day</strong></td>		
                   <td>
                     	<div class="form-btn">
-									<button class="submit-btn">Book Now</button>
+									<button class="submit-btn btn btn-primary">Book Now</button>
 								</div>
                   </td>
 								</tr>
@@ -207,7 +204,7 @@
         <br>
         <br>
         <div class="container">
-            <div class="row row-cols-2 row-cols-lg-4">
+            <div class="row row-cols-2 row-cols-lg-4" >
                     {{#each rows}}
                 <div class="col"> <a id="1bed" href="/rooms"><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px; border-radius:10%;" ></a>
                    <label id="1bed"><strong>{{this.Name}}</strong></label> </br>
@@ -216,9 +213,9 @@
                 {{/each}}
             </div>
         </div>
-    </section>
+  
     {{!-- slideshow --}}
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin: 78px;">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin-left: 155px; margin-right:155px; margin-top:50px; margin-bottom:50px">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
             <img src="images/3.png" class="d-block w-100 rounded overflow-auto" alt="..." style="height:300px;">
